Fixed the issue with the icon spacing/lineheight

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,22 +26,12 @@
   speak: none;
   display: inline-block;
   text-decoration: inherit;
-  width: 1em;
-  margin-right: 0.2em;
+  margin-right: 0.2rem;
   text-align: center;
-  /* opacity: .8; */
-  /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: 0.2em;
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
+  line-height: 4rem;
+  margin-left: 0.2rem; }
 
 .icon-list-add:before {
   content: '\e800'; }
